# cue-manipulation

./: .gitignore  README.md  pyproject.toml
.context/: feel_known_axis_spec.md  handoff_replication_v2.md  preregistration.md
.context/attachments/: Summary of Check transcript progress.md  Summary of Discuss prompt variation.md  Summary of Execute Project-v2.md  Summary of Execute Project.md  Summary of Explain CAA whitespace.md
configs/: full.yaml  mve.yaml  pilot.yaml  replication_qwen7b.yaml  replication_v2.yaml  replication_v3_gemma.yaml
runs/mve_llama8b/: caa_llama3_8b.npz  compare_measures.csv  dissociation_index.csv  items_filtered.jsonl  items_raw.jsonl  prime_leaks.json  primes.jsonl  regression_clustered.txt  regression_mixed.txt  summary_per_condition.csv  trials.parquet
runs/pilot_llama8b/: README.md  caa_llama3_8b.npz  compare_measures.csv  dissociation_index.csv  items_filtered.jsonl  (+6 more)
scripts/: 00_prepare_data.py  01_build_caa_vector.py  02_generate_primes.py  02b_fill_missing_primes.py  03_validate_primes.py  04_run_experiment.py  05_analyze.py  06_debug_plots.py  07_summary_figure.py  08_caa_v1_vs_v2.py  09_extended_summary.py  10_headline_figure.py  11_prereg_verdict.py  bootstrap_replication.sh  pod_bootstrap.sh  prereg_criteria.py  rerun_pipeline.sh  run_replication_qwen7b.sh  run_replication_v2.sh  run_replication_v3_gemma.sh  runpod_koriat.py  smoke_dry_run.py
tests/: test_analysis.py  test_caa_partition.py  test_conditions.py  test_confidence_parsing.py  test_filter.py  test_grader.py  test_hf_integration.py  test_prereg.py  test_primes.py
(+27 files in other folders)
